fix endpoint search
